--- a/d3vis/index.html
+++ b/d3vis/index.html
@@ -23,18 +23,15 @@
 
 
 <script type="text/javascript">
-    //var path = generatePath(4);
 
     var svg = d3.select("#curve").append("svg")
-        .attr("width", 600).attr("height", 600);
-    
-    svg.append("rect")
-        .attr("x", 0)
-        .attr("y", 0)
-        .attr("width", 50)
-        .attr("height", 50)
-        .attr("fill", "rgb(255, 165, 0)")
-        .attr("transform", "translate(0, 0)");
+        .attr("width", 600).attr("height", 600)
+        .call(svg => svg.append("path")
+        .style("stroke", "black")
+        .style("stroke-width", 4)
+        .style("fill", "none")
+        .attr("d", generatePath(8, 600).toString())
+  .node());
 </script>
 
 </html>
