--- a/d3vis/index.html
+++ b/d3vis/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <script type="text/javascript" src="./scripts/d3.v5.min.js"></script>
 <script type="text/javascript" src="./scripts/hilbertutils.js"></script>
+<script type="text/javascript" src="./scripts/audioutils.js"></script>
 <link rel="stylesheet" href="style.css">
 
 <h1>D3 Visualization of a 4x4 Hilbert curve</h1>
@@ -29,9 +30,17 @@
     var width = 600;
     var height = 600;
     var initial_order = 4;
+    var audioCtx = new AudioContext();
 
     var svg = d3.select("#curve").append("svg")
-        .attr("width", width).attr("height", height);
+        .attr("width", width)
+        .attr("height", height);
+
+    svg.append("rect")
+        .attr('width', "100%") 
+        .attr("height", "100%")
+        .attr("fill", 'grey')
+        .attr('opacity', '25%');
     
     var path = svg.append("path")
         .style("stroke", "black")
@@ -42,16 +51,25 @@
     
     var len = path.node().getTotalLength();
 
+    var arr = [],
+        volume = 0.2,
+        seconds = 2.0,
+        tone = 441
+  
+    for (var i = 0; i < audioCtx.sampleRate * seconds; i++) {
+        arr[i] = sineWaveAt(i, tone, audioCtx) * volume
+    }
+
     function updateOrder(newOrder)
     {
+        //playSound(arr, audioCtx);
         path
         .style("stroke", "black")
         .style("stroke-width", 64 / 2**newOrder)
         .style("opacity", 0.25)
         .style("fill", "none")
-        .attr('stroke-dashoffset', 0)
         .attr("d", generatePath(2**newOrder, width))
-        .transition();
+        .interrupt();
 
         len = path.node().getTotalLength();
 
