Removed unnecessary output HTML elements

--- a/d3vis/index.html
+++ b/d3vis/index.html
@@ -14,7 +14,7 @@
 <body>
     <label> Choose a file to be 'Hilbertized' and listened to</label>
     <div id="curve" class="graph">  
-        <img src="#" alt="" width="600" height="600" id="imageOutput">
+        <img alt="" width="600" height="600" id="imageOutput">
     </div>
 
     
@@ -24,8 +24,6 @@
             id="image" name="image"
             accept="image/png, image/jpeg"
             oninput="updatebg(this)">
-        <output> (w,h): </output> 
-        <output id="whIdOutput"> </output>
 
         <input type="range" 
             value="4" 
